# Omega

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  AGENT_ROLES.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SUMMARY.md  architecture.md  docker-compose.yml  justfile  prompts.md  pyproject.toml  requirements.txt
.agent/: README.md
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/: copilot-instructions.md  dependabot.yml
agent_tasks/: W4_fix_prompt.md  _TEMPLATE.md
analysis/: backfill_walkforward_equity_curves.py  combine_equity_curves.py  combined_walkforward_matrix_analyzer.py  final_combo_equity_plotter.py  metric_adjustments.py  walkforward_analyzer.py
configs/: execution_costs.yaml  symbol_specs.yaml
data/: README.md
docs/: MIGRATION_READINESS_VALIDATION.md  OMEGA_V2_AGENT_INSTRUCTION_PLAN.md  OMEGA_V2_ARCHITECTURE_PLAN.md  OMEGA_V2_CI_WORKFLOW_PLAN.md  OMEGA_V2_CONFIG_SCHEMA_PLAN.md  OMEGA_V2_DATA_FLOW_PLAN.md  OMEGA_V2_DATA_GOVERNANCE_PLAN.md  OMEGA_V2_EXECUTION_MODEL_PLAN.md  OMEGA_V2_FORMATTING_PLAN.md  OMEGA_V2_IMPLEMENTATION_WAVES.md  OMEGA_V2_INDICATOR_CACHE__PLAN.md  OMEGA_V2_METRICS_DEFINITION_PLAN.md  OMEGA_V2_MODULE_STRUCTURE_PLAN.md  OMEGA_V2_OBSERVABILITY_PROFILING_PLAN.md  OMEGA_V2_OUTPUT_CONTRACT_PLAN.md  OMEGA_V2_PLANS.md  OMEGA_V2_STRATEGIES_PLAN.md  OMEGA_V2_TECH_STACK_PLAN.md  OMEGA_V2_TESTING_VALIDATION_PLAN.md  OMEGA_V2_TRADE_MANAGER_PLAN.md  OMEGA_V2_VISION_PLAN.md  OMEGA_V2_W4_FIX_ROADMAP.md  OMEGA_V2_W6_FIX_PROMPT.md  OPERATIONAL_TRUTH_RECONCILIATION_PLAN.md  PRE_COMMIT_HOOKS.md  PYTHON_312_MIGRATION_PLAN.md  RUST_JULIA_MIGRATION_PREPARATION_PLAN.md  WAVE_0_SLIPPAGE_FEE_IMPLEMENTATION_PLAN.md  WAVE_1_1_FFI_OVERHEAD_REDUCTION_PLAN.md  WAVE_1_INDICATOR_CACHE_IMPLEMENTATION_PLAN.md  WAVE_1_RATING_MODULE_IMPLEMENTATION_PLAN.md  WAVE_2_PORTFOLIO_IMPLEMENTATION_PLAN.md  WAVE_3_EVENT_ENGINE_IMPLEMENTATION_PLAN.md  WAVE_3_MIGRATION_LEARNINGS.md  WAVE_4_EXECUTION_SIMULATOR_IMPLEMENTATION_PLAN.md  flake8-configuration.md  julia-environment-requirements.md  rust-toolchain-requirements.md
prompts/: ci-workflow-optimization-analysis.md  wave-4-execution-simulator-implementation-plan.md
reports/: rust_indicator_analysis_report.md  schema_fingerprints.json  truth_map.json
rust_core/: Cargo.toml
rust_core/.cargo/: config.toml  config.toml.example
rust_core/crates/backtest/: Cargo.toml
rust_core/crates/backtest/src/: context.rs  engine.rs  error.rs  event_loop.rs  lib.rs  result_builder.rs  runner.rs  warmup.rs
rust_core/crates/backtest/tests/: integration_test.rs
rust_core/crates/backtest/tests/fixtures/: README.md
rust_core/crates/backtest/tests/fixtures/configs/: minimal.json  with_costs.json  with_sessions.json
rust_core/crates/data/: Cargo.toml
rust_core/crates/data/src/: alignment.rs  error.rs  gaps.rs  lib.rs  loader.rs  market_hours.rs  news.rs  store.rs  validation.rs
rust_core/crates/data/tests/: common.rs  data_tests.rs  generators.rs
rust_core/crates/execution/: Cargo.toml
rust_core/crates/execution/src/: costs.rs  engine.rs  error.rs  fees.rs  fill.rs  lib.rs  pending_book.rs  slippage.rs  state.rs  symbol_specs.rs
rust_core/crates/ffi/: Cargo.toml
rust_core/crates/ffi/src/: entry.rs  error.rs  lib.rs  result.rs
rust_core/crates/indicators/: Cargo.toml
rust_core/crates/indicators/src/: cache.rs  cache_multi_tf.rs  error.rs  lib.rs  registry.rs  timeframe_mapping.rs  traits.rs
rust_core/crates/indicators/src/impl_/: atr.rs  bollinger.rs  ema.rs  garch_volatility.rs  garch_volatility_local.rs  kalman_garch_zscore.rs  kalman_garch_zscore_local.rs  kalman_mean.rs  kalman_zscore.rs  mod.rs  sma.rs  vol_cluster.rs  vol_cluster_series.rs  z_score.rs
rust_core/crates/indicators/tests/: python_parity.py  python_parity.rs
rust_core/crates/metrics/: Cargo.toml
rust_core/crates/metrics/src/: compute.rs  definitions.rs  equity_metrics.rs  lib.rs  output.rs  trade_metrics.rs
rust_core/crates/portfolio/: Cargo.toml
rust_core/crates/portfolio/src/: equity.rs  error.rs  lib.rs  portfolio.rs  position_manager.rs  stops.rs
rust_core/crates/strategy/: Cargo.toml
rust_core/crates/strategy/src/: context.rs  error.rs  lib.rs  registry.rs  runner.rs  traits.rs
rust_core/crates/strategy/src/impl_/: mean_reversion_z_score.rs  mod.rs
rust_core/crates/strategy/tests/: mrz_parity.py  mrz_parity.rs
rust_core/crates/trade_mgmt/: Cargo.toml
rust_core/crates/trade_mgmt/src/: actions.rs  context.rs  engine.rs  error.rs  lib.rs  rules.rs
rust_core/crates/types/: Cargo.toml
rust_core/crates/types/src/: candle.rs  config.rs  error.rs  lib.rs  position.rs  price_type.rs  result.rs  signal.rs  timeframe.rs  trade.rs
scripts/: check_instruction_redundancy.py  convert_candles_csv_to_parquet.py  convert_news_csv_to_parquet.py  generate_test_fixtures.py  generate_v2_golden.py  test_pnl_fix.py  test_warmup_separation.py
src/: README.md  engine_launcher.py
src/rust_modules/omega_rust/: Cargo.toml  README.md  build.rs  pyproject.toml  rust-toolchain.toml
src/rust_modules/omega_rust/benches/: indicator_bench.rs
src/rust_modules/omega_rust/src/: error.rs  lib.rs
src/rust_modules/omega_rust/src/costs/: fee.rs  slippage.rs
src/rust_modules/omega_rust/src/event/: engine.rs  types.rs
src/rust_modules/omega_rust/src/execution/: arrow.rs  mod.rs  position.rs  signal.rs  simulator.rs  sizing.rs  slippage.rs  trigger.rs
src/rust_modules/omega_rust/src/indicators/: bollinger.rs  cache.rs  choppiness.rs  ema_extended.rs  ema_impl.rs  garch.rs  kalman.rs  macd.rs  mod.rs  py_bindings.rs  rsi.rs  rsi_impl.rs  statistics.rs  types.rs
src/rust_modules/omega_rust/src/portfolio/: batch.rs  mod.rs  portfolio.rs  state.rs
src/rust_modules/omega_rust/src/rating/: common.rs  cost_shock.rs  mod.rs  robustness.rs  stability.rs  stress_penalty.rs  trade_dropout.rs  ulcer_index.rs
src/rust_modules/omega_rust/src/strategy/: executor.rs  mean_reversion_zscore.rs  mod.rs  registry.rs  types.rs
stubs/: README.md
tests/: conftest.py  (+52 more)
var/: README.md
(+561 files in other folders)
