# pyproject.toml

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omega"
version = "1.2.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "concurrent-log-handler>=0.9",
    "fastapi>=0.109",
    "filelock>=3.12",
    "holidays>=0.34",
    "joblib>=1.3",
    "matplotlib>=3.8",
    'MetaTrader5>=5.0; platform_system == "Windows"',
    "numpy>=1.26",
    "optuna>=3.4",
    "pandas>=2.1",
    "psutil>=5.9",
    "pyarrow>=14.0",
    "pydantic>=2.5",
    "python-dateutil>=2.8",
    "python-dotenv>=1.0",
    "pytz>=2023.3",
    "PyYAML>=6.0",
    "requests>=2.31",
    "uvicorn>=0.23",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "httpx>=0.28",
    "black>=24.8.0",
    "isort>=5.13.2",
    "flake8>=7.1",
    "flake8-bugbear>=24.0",
    "mypy>=1.13",
    "bandit>=1.7",
    "pip-audit>=2.7",
    "pydocstyle>=6.3",
    "types-PyYAML>=6.0",
    "types-requests>=2.31",
    "types-python-dateutil>=2.8",
    "pandas-stubs>=2.0",
    # Benchmark testing for migration preparation (P3-01)
    "pytest-benchmark>=4.0",
    # Property-based testing for numerical correctness (P3-05)
    "hypothesis>=6.100",
]
analysis = [
    # Scientific computing for analysis scripts
    "scipy>=1.12",
    # Clustering for walkforward analysis
    "scikit-learn>=1.4",
    "hdbscan>=0.8.33",
    # Progress bars for long-running analysis
    "tqdm>=4.65",
]
ml = [
    "torch>=2.1",
]
# Convenience extra: installs everything for full development + analysis
all = [
    "omega[dev,analysis,ml]",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.12"
# Stub-Pfad für untyped dependencies (P1-09)
mypy_path = "stubs"
# Global permissive für nicht-migrierte Module
ignore_missing_imports = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
pretty = true
# Keine globalen ignore_errors mehr - wird pro Modul gesteuert (P1-10)

[tool.pytest.ini_options]
markers = [
    "integration: Integrationstests über Komponenten hinweg",
    "trading_safety: Regressions- und Guardrail-Tests für Trading-Sicherheit",
    "mt5: Tests die MetaTrader5 benötigen (Windows-only)",
    "rust_integration: Tests für Rust FFI Integration",
    "julia_integration: Tests für Julia FFI Integration",
]

# ══════════════════════════════════════════════════════════════════════════════
# MYPY TYPE CHECKING CONFIGURATION (Phase 1: Type Safety Hardening)
# ══════════════════════════════════════════════════════════════════════════════
#
# P1-10: Granular Type Safety Configuration (2026-01-05)
# ────────────────────────────────────────────────────────────────────────────
# Strategie: Inkrementelle Strict-Mode-Aktivierung pro Modul
# - Migrations-Kandidaten (FFI-relevant): STRICT
# - Legacy/Stable-Production (hf_engine, ui_engine): RELAXED
# - Analyse/Research-Pipelines: PERMISSIVE
#
# Siehe auch: docs/RUST_JULIA_MIGRATION_PREPARATION_PLAN.md (Abschnitt 4.5)
# ══════════════════════════════════════════════════════════════════════════════

# ──────────────────────────────────────────────────────────────────────────────
# TIER 1: STRICT MODE - Migrations-Kandidaten (Rust/Julia FFI-Grenzen)
# ──────────────────────────────────────────────────────────────────────────────
# Diese Module sind vollständig typisiert und bereit für FFI-Definitionen.
# Änderungen müssen mypy --strict passieren.

# P1-06: backtest_engine.core - Event Engine, Execution Simulator, Indicator Cache
[[tool.mypy.overrides]]
module = ["backtest_engine.core", "backtest_engine.core.*"]
strict = true
warn_unreachable = true

# P1-05: backtest_engine.optimizer - Bayesian Optimization, Grid Search, Walkforward
[[tool.mypy.overrides]]
module = ["backtest_engine.optimizer", "backtest_engine.optimizer.*"]
strict = true
warn_unreachable = true

# P1-07: backtest_engine.rating - Performance Metrics, Robustness Scores
[[tool.mypy.overrides]]
module = ["backtest_engine.rating", "backtest_engine.rating.*"]
strict = true
warn_unreachable = true

# P1-04: backtest_engine.config - Pydantic Configuration Models
[[tool.mypy.overrides]]
module = ["backtest_engine.config", "backtest_engine.config.*"]
strict = true
warn_unreachable = true

# P1-08: shared.protocols - FFI Interface Protocols (@runtime_checkable)
[[tool.mypy.overrides]]
module = ["shared", "shared.*"]
strict = true
warn_unreachable = true

# ──────────────────────────────────────────────────────────────────────────────
# TIER 2: STRICT MODE - Strategie Base Classes und Implementations
# ──────────────────────────────────────────────────────────────────────────────
# Strategien sind bereits gut typisiert und sollten als Referenz-Implementierungen
# für neue Strategien dienen.

[[tool.mypy.overrides]]
module = [
    "strategies._base.*",
    "strategies.mean_reversion_z_score.*",
    "strategies.ema_rsi_trend_follow.*",
]
strict = true
warn_unreachable = true

# ──────────────────────────────────────────────────────────────────────────────
# TIER 3: RELAXED MODE - Live-Trading Engine (Production Safety First)
# ──────────────────────────────────────────────────────────────────────────────
# hf_engine bleibt bewusst relaxed: MT5-Integration, kritische Trading-Logik.
# Änderungen hier müssen besonders sorgfältig geprüft werden (Trading Safety).

[[tool.mypy.overrides]]
module = [
    "hf_engine.adapter.*",
    "hf_engine.core.*",
    "hf_engine.infra.*",
    "hf_engine.risk.*",
    "hf_engine.execution.*",
]
ignore_errors = true
# Rationale: MT5-Bindings, Legacy-Code, Windows-only Dependencies
# Migrations-Priorität: NIEDRIG (Live-Trading bleibt Python)

# ──────────────────────────────────────────────────────────────────────────────
# TIER 4: PERMISSIVE MODE - Analyse, Research, Support-Module
# ──────────────────────────────────────────────────────────────────────────────
# Nicht FFI-kritische Module: Flexibilität > Striktheit

[[tool.mypy.overrides]]
module = [
    "backtest_engine.analysis.*",
    "backtest_engine.data.*",
    "backtest_engine.deployment.*",
    "backtest_engine.logging.*",
    "backtest_engine.report.*",
    "backtest_engine.sizing.*",
    "backtest_engine.strategy.*",
    "backtest_engine.runner",
    "backtest_engine.run_all",
    "backtest_engine.batch_runner",
]
ignore_errors = true
# Rationale: Research-fokussiert, häufige Änderungen, nicht FFI-relevant
# Migrations-Priorität: NIEDRIG bis MITTEL (je nach Performance-Profil)

# ──────────────────────────────────────────────────────────────────────────────
# TIER 5: UI-Engine (Operational Tooling)
# ──────────────────────────────────────────────────────────────────────────────

[[tool.mypy.overrides]]
module = ["ui_engine.*"]
ignore_errors = true
# Rationale: FastAPI-basiert (bereits gut typisiert), nicht FFI-relevant
# Migrations-Priorität: NIEDRIG

# ══════════════════════════════════════════════════════════════════════════════
# P1-10 ACCEPTANCE CRITERIA - STATUS: ✅ ERFÜLLT
# ══════════════════════════════════════════════════════════════════════════════
# [x] pyproject.toml mit differenzierten [[tool.mypy.overrides]] Blöcken
# [x] Kein globales ignore_errors (nur ignore_missing_imports für Fallback)
# [x] Tiered-Ansatz: Strict (Migrations) > Relaxed (Live) > Permissive (Research)
# [x] Dokumentation der Rationale und Migrations-Priorität pro Tier
# [x] P1-06, P1-07, P1-05 Module korrekt in Strict-Mode konfiguriert
# ══════════════════════════════════════════════════════════════════════════════

