[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Omega Team"]
license = "MIT"
rust-version = "1.92"

[workspace.dependencies]
# Interne Crates
omega_types = { path = "crates/types" }
omega_indicators = { path = "crates/indicators" }

# Externe Crates
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
