[package]
name = "omega_backtest"
version.workspace = true
edition.workspace = true

[dependencies]
omega_types = { workspace = true }
omega_data = { workspace = true }
omega_indicators = { workspace = true }
omega_execution = { workspace = true }
omega_portfolio = { workspace = true }
omega_strategy = { workspace = true }
omega_trade_mgmt = { workspace = true }
omega_metrics = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = "0.1"
rand_chacha = "0.3"
sha2 = { workspace = true }

[dev-dependencies]
arrow = "57"
parquet = "57"
temp-env = "0.3"
tempfile = "3"
