[package]
name = "omega_execution"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Order execution, fill simulation, slippage and fee models for Omega V2"

[dependencies]
omega_types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
rand = "0.8"
rand_chacha = "0.3"
thiserror = { workspace = true }

[dev-dependencies]
approx = "0.5"
